demo/src/main/java/com/example/demo/error/custom/InvalidJwtAuthenticationException.java
package com.example.demo.error.custom;

public class InvalidJwtAuthenticationException extends RuntimeException {
    public InvalidJwtAuthenticationException(String message) {
        super(message);
    }
}
